--- a/packages/package-02/package.json
+++ b/packages/package-02/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@joehua/package-01",
-  "version": "0.1.4",
+  "name": "@joehua/package-02",
+  "version": "0.1.5",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
