--- a/packages/package-02/package.json
+++ b/packages/package-02/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@joehua/package-02",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require babel-register --require babel-polyfill 'tests/*.js'"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
