--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "private": true,
   "dependencies": {
     "lerna": "^1.1.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-flow-comments": "^6.3.19",
+    "babel-plugin-transform-flow-comments": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-things": "^0.2.0",
+    "debug": "^2.2.0",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-import": "^1.8.0",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0",
+    "uuid": "^2.0.2",
+    "lerna": "2.0.0-beta.13"
   }
 }
